objects/ssot__GameParticipantReward__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDateTime__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GameParticipantId__c</fullName>
        <label>Game Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GameRewardId__c</fullName>
        <label>Game Reward</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Game Participant Reward Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuedRewardId__c</fullName>
        <label>Issued Reward</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuedRewardObject__c</fullName>
        <label>Issued Reward Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceActivityId__c</fullName>
        <label>Source Activity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceActivityObject__c</fullName>
        <label>Source Activity Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227450577_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GameParticipantReward_SourceActivity_rel</label>
        <referenceTo>ssot__GameDefinition__dlm</referenceTo>
        <relationshipLabel>GameParticipantReward_SourceActivity_rel</relationshipLabel>
        <relationshipName>rel_1729227450577_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227464383_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GameParticipantReward_GameRewardId_m_rel</label>
        <referenceTo>ssot__GameReward__dlm</referenceTo>
        <relationshipLabel>GameParticipantReward_GameRewardId_m_rel</relationshipLabel>
        <relationshipName>rel_1729227464383_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729238102427_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GameParticipantReward_GameParticipan_rel</label>
        <referenceTo>ssot__GameParticipant__dlm</referenceTo>
        <relationshipLabel>GameParticipantReward_GameParticipan_rel</relationshipLabel>
        <relationshipName>rel_1729238102427_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>